Add debug log channel

--- a/cpp-utils/cpp-utils.vcxproj
+++ b/cpp-utils/cpp-utils.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="LoggerImp.h" />
     <ClInclude Include="LogStream.h" />
     <ClInclude Include="QueueManager.h" />
+    <ClInclude Include="WindowsDebugLogChannel.h" />
     <ClInclude Include="Winutil.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
