--- a/cpp-utils/cpp-utils.vcxproj.filters
+++ b/cpp-utils/cpp-utils.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="Helpers.h">
       <Filter>Header Files\common\helpers</Filter>
     </ClInclude>
+    <ClInclude Include="WindowsDebugLogChannel.h">
+      <Filter>Header Files\windows</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
