--- a/cpp-utils/cpp-utils.vcxproj.filters
+++ b/cpp-utils/cpp-utils.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="Header Files\common\tools\logger">
       <UniqueIdentifier>{d8979714-ee37-424d-9368-7a29053c175e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\windows\ipc">
+      <UniqueIdentifier>{1514d194-e25d-4bb3-9dbc-19d1694855b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\windows\ipc\namedpipe">
+      <UniqueIdentifier>{d7f6c276-9c65-416b-b673-663890b59cdf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -39,18 +45,21 @@
     <ClCompile Include="Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\include\cpp-utils\RAII.h">
+    <ClCompile Include="..\include\cpp-utils\WinRAII.h">
       <Filter>Header Files\windows</Filter>
     </ClCompile>
     <ClCompile Include="..\include\cpp-utils\StateMachine.h">
       <Filter>Header Files\common\logic</Filter>
+    </ClCompile>
+    <ClCompile Include="..\include\cpp-utils\NamedpipeServer.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\cpp-utils\guid.h">
       <Filter>Header Files\windows</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\cpp-utils\Helpers.h">
+    <ClInclude Include="..\include\cpp-utils\TypeHelpers.h">
       <Filter>Header Files\common\helpers</Filter>
     </ClInclude>
     <ClInclude Include="..\include\cpp-utils\ImportFunction.h">
@@ -76,6 +85,12 @@
     </ClInclude>
     <ClInclude Include="..\include\cpp-utils\Winutil.h">
       <Filter>Header Files\windows</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\cpp-utils\NamedpipeClient.h">
+      <Filter>Header Files\windows\ipc\namedpipe</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\cpp-utils\NamedpipeServer.h">
+      <Filter>Header Files\windows\ipc\namedpipe</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
