--- a/cpp-utils/cpp-utils.vcxproj
+++ b/cpp-utils/cpp-utils.vcxproj
@@ -157,6 +157,9 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="..\include\cpp-utils\WinRAII.h" />
     <ClCompile Include="..\include\cpp-utils\StateMachine.h" />
+    <ClCompile Include="test_logger.cpp" />
+    <ClCompile Include="test_namedpipe.cpp" />
+    <ClCompile Include="test_queue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\cpp-utils\guid.h" />
@@ -171,6 +174,7 @@
     <ClInclude Include="..\include\cpp-utils\QueueManager.h" />
     <ClInclude Include="..\include\cpp-utils\WindowsDebugLogChannel.h" />
     <ClInclude Include="..\include\cpp-utils\Winutil.h" />
+    <ClInclude Include="tests.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
